# provx

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CODEOWNERS  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  Makefile  NOTICE  README.md  RESPONSIBLE_USE.md  SECURITY.md  SUPPORT.md  docker-compose.yml  labels.yml  mypy.ini  pytest.ini  ruff.toml
.claude/: rules.md
.claude/scripts/: install-hooks.sh  install-workflows.sh  plan-mode-context.sh  x-precommit.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml  detection-issue.yml  feature.yml  new-adapter.yml
.github/scripts/: x-precommit.sh
.github/workflows/: ci.yml  x-check.yml
audits/: README.md
audits/backend/: 00_OVERVIEW.md  01_ARCHITECTURE.md  99_FINDINGS.md  module_alembic.md  module_api.md  module_core.md  module_models.md  module_services.md
audits/frontend/: 00_OVERVIEW.md  01_ARCHITECTURE.md  99_FINDINGS.md  section_app.md  section_client_package.md  section_lib.md
audits/sdk/: 00_OVERVIEW.md  (+9 more)
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  docker-entrypoint.sh  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: a7f3c9d21e84_findings_pipeline_dedup_lifecycle.py  b1428574732c_walking_skeleton_core_tables.py  c2e6f1a09b53_add_finding_description.py  d4b8e2f1c7a6_add_credential_table.py
backend/app/: __init__.py  config.py  db.py  main.py
backend/app/api/: __init__.py  engagements.py  schemas.py
backend/app/models/: __init__.py  findings.py  tables.py
backend/app/security/: __init__.py  evidence_crypto.py
backend/app/services/: __init__.py  credentials.py  lifecycle.py  report.py  report_attack.py  retest.py  safety.py  scan_runner.py
backend/app/templates/: report.html.j2
backend/tests/: conftest.py  test_api_engagements.py  test_config_drift.py  test_credentials.py  test_evidence_crypto.py  test_findings.py  test_findings_pipeline.py  test_integration_authenticated.py  test_integration_redirect.py  test_lifecycle.py  test_migrations.py  test_report.py  test_safety.py  test_scan_runner.py
docs/: 00_README_docs_index.md  BOOTSTRAP_with_ClaudeCode.md  COMPETITIVE_HARVEST_and_CLI.md  COMPETITOR_LANDSCAPE_CATALOG.md  DETERMINISTIC_CORE_and_NonAI_Strengths.md  KNOWN_ISSUES.md  PLAYBOOK_SCHEMA.md  POSITIONING_and_STRATEGY.md  PROJECT_SETUP_PLAYBOOK.md  PROVX_RULES.md  PenForge-Local_Build_Blueprint.md  Provx_Build_Blueprint.md  REPOSITORY_STRATEGY.md  ROADMAP.md  START_HERE_Master_Checklist.md  STATUS.md  TRADEMARK.md  VALIDATION_and_REFERENCE_SYSTEMS.md
frontend/: .dockerignore  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
lab/: README.md  expected.yml  harness.py
wordlists/: README.md
workflows/: README.md  web-baseline.yaml
(+45 files in other folders)
