[project]
name = "provx-backend"
version = "0.0.0"
description = "Provx control plane - FastAPI API, scan orchestration, and findings pipeline."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Solomon Nii Amu Darku" }]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    # The canonical Finding contract and the adapter registry live in provx-sdk. It is a
    # real dependency now that the serving path imports it; installed from the monorepo
    # path in dev, CI, and the image.
    "provx-sdk",
    "sqlmodel>=0.0.22",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "aiosqlite>=0.20",
    # SQLAlchemy's async layer needs greenlet but does not require it itself.
    "greenlet>=3",
    "jinja2>=3.1",
    "pydantic-settings>=2.3",
    # Evidence-at-rest encryption (AES-256-GCM). Apache-2.0 / BSD, PX-FREE clean.
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's dependency-injection idiom puts Depends()/Query() calls in argument defaults;
# that is the documented pattern, not the mutable-default bug B008 targets.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Path", "fastapi.Body"]

[tool.mypy]
python_version = "3.12"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
# The scoped-fetch integration tests are async; keep the package self-testable standalone,
# not only through the monorepo's root pytest.ini.
asyncio_mode = "auto"
